--- a/src/pages/active/active.html
+++ b/src/pages/active/active.html
@@ -4,12 +4,24 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-content class="page">
-  <h1>Nearby Person Alert</h1>
+<ion-content class="slide-in-both-ways page active">
+  <ion-item class="backdrop active ">
+  </ion-item>
+  <h1>Best reviewed coffee shops in your area</h1>
+  <h2> Coffee 2 go </h2>
   <div class="loader"></div>
+  <img src="assets/images/cafe-example.jpg">
+  <!-- automatically uses the correct "star" icon depending on the mode -->
+  <div class="rating">
+    <ion-icon name="star"></ion-icon>
+    <ion-icon name="star"></ion-icon>
+    <ion-icon name="star"></ion-icon>
+    <ion-icon name="star"></ion-icon>
+    <ion-icon name="star"></ion-icon>
+  </div>
 
   <div class="bottom-container">
-      <ion-label color="secondary" id="lbl">MONITORING CURRENTLY ACTIVATED</ion-label>
+    <ion-label color="secondary" id="lbl">Displaying Google Reviews</ion-label>
     <button ion-button large outline block (click)="removeFence()" id="cta" color="primary">Remove Fence</button>
   </div>
 </ion-content>
