--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,17 +1,29 @@
 <ion-header>
   <ion-navbar>
+    
     <ion-title>
-      Contact
+      Your Added Locations
     </ion-title>
+
+    <ion-buttons (click)="onLoadNewPlace()" end>
+      <ion-icon name="add"> </ion-icon>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
-
 <ion-content>
   <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-left></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
+  <ion-item *ngFor="let place of places" (click)="onOpenPlace(place)">
+    <ion-thumbnail item-left>
+      <img src="img/thumbnail-totoro.png">
+    </ion-thumbnail>
+    <h2>{{place.title}}</h2>
+    <p>Hayao Miyazaki • 1988</p>
+    <button ion-button clear item-right>View</button>
+  </ion-item>
+</ion-list>
+
+
+<button id="cta" (click)="onLoadNewPlace()">Add a location for coffee</button>
 </ion-content>
+
+
