--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,36 +1,26 @@
 <div id="custom-overlay" [style.display]="jelly ? 'flex': 'none'">
   <div class="flb">
     <div class="Aligner-item Aligner-item--top"></div>
-    <img src="assets/images/jsdiaries.jpg">
+    <img src="assets/images/coffee-bean-icon.png">
     <div class="Aligner-item Aligner-item--bottom"></div>
   </div>
 </div>
-
-<ion-content class="page">
-  <h1>WifeAlert</h1>
-  <div class="loader"></div>
-
+<ion-content class="page slide-in-both-ways ">
+  <ion-item class="backdrop">
+  </ion-item>
+  <h1>Dublin Coffee</h1>
+  <!--<div class="loader"></div>-->
+  <img src="assets/images/coffee-bean-icon.png">
   <div class="bottom-container">
     <ion-item>
       <ion-range [(ngModel)]="radius" #radiusVal min="40" max="300" color="primary" pin="true" snaps="true" step="20">
       </ion-range>
+     
     </ion-item>
-    <ion-label color="secondary" id="lbl">Fence Parameter (Meters)</ion-label>
-    <button ion-button large outline block (click)="setGeofence(radiusVal.value)" id="cta" color="primary">Set Geofence</button>
-
+     <p> {{radius}} meters </p>
+    <ion-label color="secondary" id="lbl">Find the best coffee near you.</ion-label>
+    <button ion-button large outline block (click)="setGeofence(radiusVal.value)" (click)="toggleFlip()" id="cta" color="primary">Find Coffee</button>
     <p *ngIf="error">{{ error }}</p>
-
+   
   </div>
-</ion-content>
-
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
 </ion-content>
